--- a/demo/MMDet_Tutorial.ipynb
+++ b/demo/MMDet_Tutorial.ipynb
@@ -10,7 +10,8 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "language": "python"
     },
     "accelerator": "GPU",
     "widgets": {
@@ -448,19 +449,24 @@
         "# Check mmcv installation\n",
         "from mmcv.ops import get_compiling_cuda_version, get_compiler_version\n",
         "print(get_compiling_cuda_version())\n",
-        "print(get_compiler_version())"
+        "print(get_compiler_version())\n",
+        "\n",
+        "import os\n",
+        "os.chdir('..')\n",
+        "print(os.getcwd())"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "1.5.1+cu101 True\n",
-            "2.7.0\n",
-            "10.1\n",
-            "GCC 7.5\n"
-          ],
-          "name": "stdout"
+            "1.7.1 True\n",
+            "2.8.0\n",
+            "11.0\n",
+            "MSVC 192829335\n",
+            "c:\\MyMain\\Develop\\Projects\\opensource\\deeplearning\\mmdetection\\demo\n"
+          ]
         }
       ]
     },
@@ -1594,9 +1600,7 @@
       "metadata": {
         "id": "cgSKHJobQpt6"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
